# HugeCode

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CLAUDE.md  CODING_STANDARDS.md  CONTRIBUTING.md  GEMINI.md  README.md  lint-staged.config.mjs  package.json  playwright.config.local.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vitest.aliases.ts  vitest.config.ts  vitest.root.config.ts  vitest.shared.ts
apps/code-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/code-tauri/src-tauri/capabilities/: default.json  desktop-host-integrations.json  desktop-user-surfaces.json
apps/code-tauri/src-tauri/src/: instruction_skills_watcher.rs  lib.rs  main.rs  runtime_service.rs
apps/code-tauri/src-tauri/src/accounts/: mod.rs
apps/code-tauri/src-tauri/src/backend/: common_utils.rs  git.rs  git_utils.rs  mod.rs  prompt.rs  prompt_utils.rs  runtime_metadata.rs  runtime_state.rs  state_fabric.rs  state_fabric_agent_projection.rs  state_utils.rs  terminal_process.rs  terminal_utils.rs  test_shell_commands.rs  tests.rs  tests_terminal.rs  tests_turn_send_options.rs  thread_live.rs  turn_contract.rs  turn_send.rs  workspace_utils.rs
apps/code-tauri/src-tauri/src/commands/: agents.rs  cli_sessions.rs  codex.rs  codex_command_runner.rs  codex_probe.rs  diagnostics.rs  files.rs  git.rs  health.rs  local_codex_paths.rs  mod.rs  models.rs  policy.rs  prompts.rs  remote.rs  rpc.rs  settings.rs  settings_support.rs  state_fabric.rs  terminal.rs  threads.rs  turn.rs  workspaces.rs
apps/code-tauri/src-tauri/src/models/: contracts.rs  mod.rs  pool.rs
(+2099 files in other folders)
