[package]
name = "code-tauri"
version = "0.1.0"
description = "HugeCode desktop shell"
authors = ["HugeCode"]
edition = "2021"

[lib]
name = "code_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22.1"
notify = "8.2.0"
ku0-runtime-diagnostics-export-core = { path = "../../../packages/runtime-diagnostics-export-core-rs" }
ku0-runtime-shell-core = { path = "../../../packages/runtime-shell-core-rs" }
code-runtime-service-rs = { path = "../../../packages/code-runtime-service-rs" }
sha2 = "0.10.9"
toml = "0.9.7"
zip = "8.2.0"

[features]
devtools = []

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[workspace]
resolver = "2"
members = ["."]
